--- a/kubernetes/basic.yaml
+++ b/kubernetes/basic.yaml
@@ -1,18 +1,16 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: vscode-server
+  name: ${VSCODE_NAMESPACE}
   labels:
-    app.kubernetes.io/instance: vscode-server
     app.kubernetes.io/name: vscode-server
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: vscode-server
-  namespace: vscode-server
+  namespace: ${VSCODE_NAMESPACE}
   labels:
-    app.kubernetes.io/instance: vscode-server
     app.kubernetes.io/name: vscode-server
 spec:
   type: ClusterIP
@@ -22,40 +20,25 @@ spec:
       port: 8000
       targetPort: http
   selector:
-    app.kubernetes.io/instance: vscode-server
     app.kubernetes.io/name: vscode-server
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vscode-server
-  namespace: vscode-server
+  namespace: ${VSCODE_NAMESPACE}
 spec:
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/instance: vscode-server
       app.kubernetes.io/name: vscode-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: vscode-server
         app.kubernetes.io/name: vscode-server
     spec:
       serviceAccountName: vscode-server
-#    initContainers:
-#        - name: init-dind-daemon
-#          image: busybox
-#          securityContext:
-#            privileged: true
-#          command:
-#            - /bin/sh
-#            - '-c'
-#            - 'rm -rf /var/run/*'
-#          volumeMounts:
-#            - mountPath: /var/run
-#              name: docker-graph-run
       containers:
         - name: dind-daemon
           image: docker:dind
@@ -64,11 +47,11 @@ spec:
             privileged: true
           resources:
             limits:
-              cpu: 4.0
-              memory: 4G
+              cpu: ${DIND_CPU_MAX}
+              memory: ${DIND_MEM_MAX}
             requests:
-              cpu: 200m
-              memory: 512Mi
+              cpu: ${DIND_CPU_REQUEST}
+              memory: ${DIND_MEM_REQUEST}
           volumeMounts:
             - name: docker-graph-storage
               mountPath: /var/lib/docker
@@ -77,7 +60,7 @@ spec:
             - name: docker-graph-run
               mountPath: /var/run
         - name: vscode-server
-          image: ${VSCODE_SERVER_REGISTRY}/vscode-server
+          image: ${VSCODE_SERVER_IMAGE}
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
@@ -98,11 +81,11 @@ spec:
               value: /usr/share/vscode-server
           resources:
             limits:
-              cpu: 4.0
-              memory: 8G
+              cpu: ${VSCODE_CPU_MAX}
+              memory: ${VSCODE_MEM_MAX}
             requests:
-              cpu: 500m
-              memory: 512Mi
+              cpu: ${VSCODE_CPU_REQUEST}
+              memory: ${VSCODE_MEM_REQUEST}
       volumes:
         - name: docker-graph-run
           emptyDir: {}
@@ -119,7 +102,7 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  namespace: vscode-server
+  namespace: ${VSCODE_NAMESPACE}
   name: vscode-server
 spec:
   accessModes:
@@ -132,17 +115,15 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: vscode-server
+  namespace: ${VSCODE_NAMESPACE}
   name: vscode-server
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vscode-server-ingress
-  namespace: vscode-server
+  namespace: ${VSCODE_NAMESPACE}
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     nginx.ingress.kubernetes.io/secure-backends: "false"
     nginx.ingress.kubernetes.io/auth-type: basic
@@ -150,13 +131,17 @@ metadata:
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - vscode"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
-  ingressClassName: public
+  ingressClassName: ${NGINX_INGRESS_CLASS}
+  tls:
+    - hosts:
+        - ${VSCODE_HOSTNAME}
+      secretName: vscode-server-ingress-tls
   rules:
     - host: ${VSCODE_HOSTNAME}
       http:
         paths:
-          - path: "/(.*)"
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: vscode-server
