--- a/nginx/etc/template.d/default.conf.template
+++ b/nginx/etc/template.d/default.conf.template
@@ -16,6 +16,8 @@ server {
 		#proxy_redirect off;
 		#proxy_http_version 1.1;
 
+		client_body_timeout 600s;
+
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 		proxy_set_header X-Real-IP $remote_addr;
