--- a/kubernetes/multi-account/main.yaml
+++ b/kubernetes/multi-account/main.yaml
@@ -244,9 +244,37 @@ metadata:
   namespace: ${VSCODE_NAMESPACE}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
-    nginx.ingress.kubernetes.io/secure-backends: "false"
     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location ~ ^/(stable|insiders|static|callback|web-extension-resource) {
+          proxy_set_header Host $host;
+
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Auth-Request-Redirect $scheme://$host:$LISTEN_PORT$request_uri;
+
+          auth_request /oauth2/auth;
+          error_page 401 = /oauth2/start?rd=https://$host:$LISTEN_PORT$request_uri;
+ 
+          auth_request_set $user   $upstream_http_x_auth_request_user;
+          auth_request_set $email  $upstream_http_x_auth_request_email;
+          auth_request_set $token  $upstream_http_x_auth_request_access_token;
+          proxy_set_header X-User  $user;
+          proxy_set_header X-Email $email;
+          proxy_set_header X-Access-Token $token;
+
+          rewrite $uri $scheme://$host:$LISTEN_PORT/$user$uri;
+      }
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      auth_request_set $user   $upstream_http_x_auth_request_user;
+      auth_request_set $email  $upstream_http_x_auth_request_email;
+      auth_request_set $token  $upstream_http_x_auth_request_access_token;
+      proxy_set_header X-User  $user;
+      proxy_set_header X-Email $email;
+      proxy_set_header X-Access-Token $token;
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: ${NGINX_INGRESS_CLASS}
