--- a/kubernetes/multi-account/main.yaml
+++ b/kubernetes/multi-account/main.yaml
@@ -12,7 +12,6 @@ metadata:
   namespace: ${VSCODE_NAMESPACE}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
-    nginx.ingress.kubernetes.io/secure-backends: "false"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: ${NGINX_INGRESS_CLASS}
@@ -31,22 +30,6 @@ spec:
                 name: oauth2-proxy
                 port:
                   number: 4180
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app.kubernetes.io/name: vscode-server-helper
-  name: vscode-server-helper
-  namespace: ${VSCODE_NAMESPACE}
-spec:
-  ports:
-    - name: http
-      port: 4180
-      protocol: TCP
-      targetPort: 4180
-  selector:
-    app.kubernetes.io/name: vscode-server-helper
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -230,6 +213,22 @@ subjects:
     namespace: ${VSCODE_NAMESPACE}
 ---
 apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/name: vscode-server-helper
+  name: vscode-server-helper
+  namespace: ${VSCODE_NAMESPACE}
+spec:
+  ports:
+    - name: http
+      port: 8000
+      protocol: TCP
+      targetPort: 8000
+  selector:
+    app.kubernetes.io/name: vscode-server-helper
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
@@ -254,11 +253,11 @@ metadata:
           proxy_set_header Connection "upgrade";
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Auth-Request-Redirect $scheme://$host:$LISTEN_PORT$request_uri;
+          proxy_set_header X-Auth-Request-Redirect $scheme://$host$request_uri;
 
           auth_request /oauth2/auth;
-          error_page 401 = /oauth2/start?rd=https://$host:$LISTEN_PORT$request_uri;
- 
+          error_page 401 = /oauth2/start?rd=https://$host$request_uri;
+
           auth_request_set $user   $upstream_http_x_auth_request_user;
           auth_request_set $email  $upstream_http_x_auth_request_email;
           auth_request_set $token  $upstream_http_x_auth_request_access_token;
@@ -266,7 +265,7 @@ metadata:
           proxy_set_header X-Email $email;
           proxy_set_header X-Access-Token $token;
 
-          rewrite $uri $scheme://$host:$LISTEN_PORT/$user$uri;
+          rewrite $uri /$user$uri;
       }
     nginx.ingress.kubernetes.io/configuration-snippet: |
       auth_request_set $user   $upstream_http_x_auth_request_user;
