--- a/kubernetes/single-account/basic.yaml
+++ b/kubernetes/single-account/basic.yaml
@@ -53,12 +53,14 @@ spec:
               cpu: ${DIND_CPU_REQUEST}
               memory: ${DIND_MEM_REQUEST}
           volumeMounts:
-            - name: docker-graph-storage
+            - name: vscode-server-volume
               mountPath: /var/lib/docker
-            - name: docker-graph-certs
-              mountPath: /certs
+              subPath: vscode-server-docker
             - name: docker-graph-run
               mountPath: /var/run
+            - name: vscode-server-volume
+              mountPath: /certs
+              subPath: vscode-server-cert
         - name: vscode-server
           image: ${VSCODE_SERVER_IMAGE}
           imagePullPolicy: Always
@@ -67,11 +69,14 @@ spec:
               name: http
           volumeMounts:
             - mountPath: /usr/share/vscode-server
-              name: vscode-server-data
-            - mountPath: /home/vscode-server/sources
-              name: vscode-server-sources
+              name: vscode-server-volume
+              subPath: vscode-server-data
+            - mountPath: /home/vscode-server
+              name: vscode-server-volume
+              subPath: vscode-server-home
             - mountPath: /certs
-              name: docker-graph-certs
+              name: vscode-server-volume
+              subPath: vscode-server-cert
             - mountPath: /var/run
               name: docker-graph-run
           env:
@@ -89,21 +94,15 @@ spec:
       volumes:
         - name: docker-graph-run
           emptyDir: {}
-        - name: docker-graph-certs
-          emptyDir: {}
-        - name: docker-graph-storage
-          emptyDir: {}
-        - name: vscode-server-data
-          emptyDir: {}
-        - name: vscode-server-sources
+        - name: vscode-server-volume
           persistentVolumeClaim:
-            claimName: vscode-server
+            claimName: pvc-vscode-server
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   namespace: ${VSCODE_NAMESPACE}
-  name: vscode-server
+  name: pvc-vscode-server
 spec:
   accessModes:
     - ReadWriteOnce
@@ -125,7 +124,6 @@ metadata:
   namespace: ${VSCODE_NAMESPACE}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
-    nginx.ingress.kubernetes.io/secure-backends: "false"
     nginx.ingress.kubernetes.io/auth-type: basic
     nginx.ingress.kubernetes.io/auth-secret: basic-auth
     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - vscode"
