--- a/kubernetes/multi-account/main.yaml
+++ b/kubernetes/multi-account/main.yaml
@@ -246,7 +246,7 @@ metadata:
     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
     nginx.ingress.kubernetes.io/server-snippet: |
-      location ~ ^/(stable|insiders|static|callback|web-extension-resource) {
+      location ~ ^/stable|insiders|static|callback|web-extension-resource {
           proxy_set_header Host $host;
 
           proxy_set_header Upgrade $http_upgrade;
@@ -267,14 +267,7 @@ metadata:
 
           rewrite $uri /$user$uri;
       }
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      auth_request_set $user   $upstream_http_x_auth_request_user;
-      auth_request_set $email  $upstream_http_x_auth_request_email;
-      auth_request_set $token  $upstream_http_x_auth_request_access_token;
-      proxy_set_header X-User  $user;
-      proxy_set_header X-Email $email;
-      proxy_set_header X-Access-Token $token;
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: "${VSCODE_CERT_CLUSTER_ISSUER}"
 spec:
   ingressClassName: ${NGINX_INGRESS_CLASS}
   tls:
