--- a/kubernetes/multi-account/template.yaml
+++ b/kubernetes/multi-account/template.yaml
@@ -183,8 +183,8 @@ metadata:
 #    external-dns.alpha.kubernetes.io/hostname: ${ACCOUNT_HOSTNAME}
 #    external-dns.alpha.kubernetes.io/target: ${VSCODE_HOSTNAME}
 #    external-dns.alpha.kubernetes.io/ttl: '600'
-#    nginx.ingress.kubernetes.io/auth-url: "${VSCODE_INGRESS_AUTH_URL}"
-#    nginx.ingress.kubernetes.io/auth-signin: "${VSCODE_INGRESS_AUTH_SIGNIN}"
+    nginx.ingress.kubernetes.io/auth-url: "${VSCODE_INGRESS_AUTH_URL}"
+    nginx.ingress.kubernetes.io/auth-signin: "${VSCODE_INGRESS_AUTH_SIGNIN}"
 #    cert-manager.io/cluster-issuer: "${VSCODE_CERT_CLUSTER_ISSUER}"
 spec:
   ingressClassName: ${NGINX_INGRESS_CLASS}
