--- a/kubernetes/multi-account/template.yaml
+++ b/kubernetes/multi-account/template.yaml
@@ -116,6 +116,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
+  storageClassName: ${STORAGE_CLASS}
   resources:
     requests:
       storage: ${VSCODE_PVC_SIZE}
