--- a/kubernetes/single-account/basic.yaml
+++ b/kubernetes/single-account/basic.yaml
@@ -107,6 +107,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
+  storageClassName: ${STORAGE_CLASS}
   resources:
     requests:
       storage: 10Gi
