--- a/kubernetes/oauth2-proxy/oauth2-proxy.yaml
+++ b/kubernetes/oauth2-proxy/oauth2-proxy.yaml
@@ -45,8 +45,7 @@ spec:
         app.kubernetes.io/name: oauth2-proxy
     spec:
       containers:
-        -
-          name: redis
+        - name: redis
           image: redis:6-alpine3.17
           ports:
             - containerPort: 6379
@@ -61,21 +60,25 @@ spec:
             requests:
               cpu: 100m
               memory: 200Mi
-        -
-          image: quay.io/oauth2-proxy/oauth2-proxy:latest
+        - image: quay.io/oauth2-proxy/oauth2-proxy:latest
           imagePullPolicy: Always
           name: oauth2-proxy
           args:
-            - --provider=${VSCODE_OAUTH2_PROXY_PROVIDER}
-            - --client-id=${VSCODE_OAUTH2_PROXY_CLIENT_ID}
-            - --client-secret=${VSCODE_OAUTH2_PROXY_CLIENT_SECRET}
-            - --cookie-secret=${VSCODE_OAUTH2_PROXY_COOKIE_SECRET}
-            - --scope=${VSCODE_OAUTH2_PROXY_SCOPE}
+            - --provider=$VSCODE_OAUTH2_PROXY_PROVIDER
+            - --client-id=$VSCODE_OAUTH2_PROXY_CLIENT_ID
+            - --client-secret=$VSCODE_OAUTH2_PROXY_CLIENT_SECRET
+            - --cookie-secret=$VSCODE_OAUTH2_PROXY_COOKIE_SECRET
+            - --scope=$VSCODE_OAUTH2_PROXY_SCOPE
+            - --reverse-proxy=true
             - --email-domain=*
             - --upstream=file:///dev/null
             - --http-address=0.0.0.0:4180
             - --session-store-type=redis
             - --redis-connection-url=redis://127.0.0.1:6379
+            - --pass-access-token=true
+            - --pass-authorization-header=true
+            - --set-xauthrequest=true
+            - --set-authorization-header=true
           resources:
             limits:
               cpu: 200m
