--- a/nginx/etc/template.d/default.conf.template
+++ b/nginx/etc/template.d/default.conf.template
@@ -29,9 +29,9 @@ server {
 		auth_request_set $user   $upstream_http_x_auth_request_user;
 		auth_request_set $email  $upstream_http_x_auth_request_email;
 		auth_request_set $token  $upstream_http_x_auth_request_access_token;
-		proxy_set_header X-User  $user;
-		proxy_set_header X-Email $email;
-		proxy_set_header X-Access-Token $token;
+		proxy_set_header X-Auth-Request-User  $user;
+		proxy_set_header X-Auth-Request-Email $email;
+		proxy_set_header X-Auth-Request-Access-Token $token;
 	}
 
 	location /oauth2/ {
